[package]
name = "wind-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy_animations_manager = { git = "https://github.com/newclarityex/bevy_animations_manager.git", version = "0.1.0" }
bevy_rapier2d = "0.25.0"
bevy_tweening = "0.10.0"
rand = "0.8.5"
rangemap = "1.5.1"
